Your commit message

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 JWT_SECRET="random#secret"
+JWT_EXPIRES_IN="7d" 
 STRIPE_SECRET_KEY="Paste your stripe secret key here"
-REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyCJbxH9d9Yyr3eM9WKhI_fJpiD6jftaK3I
+REACT_APP_GOOGLE_MAPS_API_KEY="AIzaSyCJbxH9d9Yyr3eM9WKhI_fJpiD6jftaK3I"
